1.2.2p3:
    Checks & Agents:
    * FIX: winperf_processor: fix case where CPU percent is exactly 100%
    * FIX: blade_powerfan: fix mixup of default levels 50/40 -> 40/50

    Multisite:
    * FIX: LDAP: Disabling use of referrals in active directory configuration
    * FIX: Fixed missing roles in auth.php (in some cases) which resulted in
           non visible pnp graphs and missing nagvis permissions

    WATO:
    * FIX: fix layout of Auxiliary tags table
    * FIX: avoid exception when called first time and first page ist host tags

   
1.2.2p2:
    Core:
    * FIX: better error message in case of exception in SNMP handling
    * FIX: livecheck: fixed handling of one-line plugin outputs and missing \n
           (Thanks to Florent Peterschmitt)

    Checks & Agents:
    * FIX: apache_status: use (also) apache_status.cfg instead of apache_status.conf
    * FIX: jolokia_info: ignore ERROR instances
    * FIX: f5_bigip_vserver: fix wrong OID (13 instead of 1), thanks to Miro Ramza
    * FIX: f5_bigip_psu: handle more than first power supply, thanks to Miro Ramza
    * FIX: ipmi_sensors: ignore sensors in state [NA] (not available)
    * FIX: aix_lvm: handle agents that output an extra header line
    * FIX: zfsget: do not assume that devices begin with /, but mountpoints
    * FIX: ipmi_sensors: handle two cases for DELL correctly (thanks to Sebastian Talmon)
    * FIX: check_dns: enable performance data
    * FIX: free_ipmi: fix name of sensor cache file if hostname contains domain part
    * FIX: ad_replication plugin: Fixed typo (Thanks to Dennis Honke)

    Multisite:
    * List of views: Output the alias of a datasource instead of internal name
    * FIX: fix column editor for join columns if "SERVICE:" is l10n'ed
    * FIX: fix invalid request in livestatus query after reconnect

    WATO:
    * FIX: convert editing of global setting to POST. This avoid URL-too-long
      when defining lots of Event Console actions